--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -3,10 +3,18 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: 25rem;
+
+  img {
+    width: 20rem;
+    height: 20rem;
+  }
 
   h2,
   p,
-  h5 {
+  h5,
+  img {
     padding-left: 0.5rem;
+    padding-top: 0.5rem;
   }
 }
