--- a/src/main.scss
+++ b/src/main.scss
@@ -7,3 +7,4 @@
 @import "./sass/components/app";
 @import "./sass/components/card";
 @import "./sass/components/cards";
+@import "./sass/components/animalShow";
