--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -1,5 +1,8 @@
 .card {
-  border: 1px solid #000;
+  padding: 1rem;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  border-radius: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
