--- a/src/main.scss
+++ b/src/main.scss
@@ -8,3 +8,4 @@
 @import "./sass/components/card";
 @import "./sass/components/cards";
 @import "./sass/components/animalShow";
+@import "./sass/components/animal";
