--- a/src/sass/components/_animalShow.scss
+++ b/src/sass/components/_animalShow.scss
@@ -6,4 +6,10 @@
     color: red;
     margin-bottom: 1rem;
   }
+
+  &__animal-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
